--- a/provisions/configs/nginx-conf/default.j2
+++ b/provisions/configs/nginx-conf/default.j2
@@ -1,7 +1,7 @@
 server {
 
     root /var/www/custom.roadsideweb.dev/public_html;
-    index index.html index.htm index.php;
+    index index.php index.htm index.html;
 
     # Make site accessible from http://localhost/
     server_name localhost;
