WP works! http://custom.roadsideweb.dev:8080/

--- a/provisions/configs/nginx-conf/default.j2
+++ b/provisions/configs/nginx-conf/default.j2
@@ -44,11 +44,15 @@ server {
     #
     #   # With php5-cgi alone:
     #   fastcgi_pass 127.0.0.1:9000;
+        try_files $uri = 404;
        # With php5-fpm:
        fastcgi_pass unix:/var/run/php5-fpm.sock;
        fastcgi_index index.php;
+       fastcgi_intercept_errors on;
+       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
        include fastcgi_params;
-    }
+       error_page 404 /404page.html;
+    } 
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
