--- a/provisions/configs/nginx-conf/nginx.j2
+++ b/provisions/configs/nginx-conf/nginx.j2
@@ -17,18 +17,25 @@ events {
 http {
 #   rewrite_log on;
 
-    include mime.types;
-    default_type       application/octet-stream;
-    access_log         /var/log/nginx/access.log;
-    sendfile           on;
-#   tcp_nopush         on;
-    keepalive_timeout  3;
-#   tcp_nodelay        on;
-#   gzip               on;
+    include              mime.types;
+    default_type         application/octet-stream;
+    access_log           /var/log/nginx/access.log;
+    sendfile             on;
+#   tcp_nopush           on;
+    keepalive_timeout     3;
+#   tcp_nodelay          on;
+#   gzip                 on;
 
-    #php max upload limit cannot be larger than this       
-    client_max_body_size 13m;
+    #php max upload limit cannot be larger than this
+    client_max_body_size 128M;
+    log_format  main     '$remote_addr - $remote_user [$time_local] "$request" '
+                         '$status $body_bytes_sent "$http_referer" '
+                         '"$http_user_agent" "$http_x_forwarded_for"';
+
     index index.php index.html index.htm;
+
+    fastcgi_cache_path /var/www/nginx_cache levels=1:2 keys_zone=czone:10m max_size=50m inactive=120m;
+    fastcgi_temp_path  /var/www/nginx_tmp;
 
     # Upstream to abstract backend connection(s) for PHP.
     upstream php {
