--- a/provisions/configs/nginx-conf/nginx.j2
+++ b/provisions/configs/nginx-conf/nginx.j2
@@ -47,5 +47,6 @@ http {
         #server 127.0.0.1:9000;
     }
 
-    include sites-enabled/*;
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
