--- a/provisions/configs/nginx-conf/nginx.j2
+++ b/provisions/configs/nginx-conf/nginx.j2
@@ -3,8 +3,9 @@ user www-data;
 
 # usually equal to number of CPU's you have. run command "grep processor /proc/cpuinfo | wc -l" to find it
 # 2 on the vagrantup precise64 box
-worker_processes 2;
-worker_cpu_affinity 0101 1010;
+# 1 on the wheezy64 box
+# worker_processes 2;
+# worker_cpu_affinity 0101 1010;
 
 error_log  /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
